# umbra

./: .gitignore  Cargo.toml
umbra-grpc/: .env  Cargo.toml  build.rs
umbra-grpc/proto/: umbra.proto
umbra-grpc/src/: di.rs  errors.rs  main.rs  umbra_auth.rs
umbra-grpc/src/handler/: is_alive.rs  mod.rs  registration.rs  system.rs
umbra-grpc/src/service/: mod.rs
umbra-model/: .env  Cargo.toml  README.md  rustfmt.toml
umbra-model/migrations/2019-11-30-001717_mysql_table_create_token_kind/: down.sql  up.sql
umbra-model/migrations/2019-11-30-002156_mysql_table_create_credential/: down.sql  up.sql
umbra-model/migrations/2019-11-30-002156_mysql_table_create_identity/: down.sql  up.sql
umbra-model/migrations/2019-11-30-002958_mysql_table_create_system/: down.sql  up.sql
umbra-model/migrations/2019-11-30-003009_mysql_table_create_organization/: down.sql  up.sql
umbra-model/migrations/2019-11-30-005134_mysql_table_create_role/: down.sql  up.sql
umbra-model/migrations/2019-11-30-005138_mysql_table_create_scope/: down.sql  up.sql
umbra-model/migrations/2019-11-30-005143_mysql_table_create_role_scope/: down.sql  up.sql
umbra-model/migrations/2019-11-30-012552_mysql_table_create_token/: down.sql  up.sql
umbra-model/migrations/2019-11-30-013332_mysql_table_create_token_data/: down.sql  up.sql
umbra-model/migrations/2019-12-02-022320_mysql_table_create_algorithm/: down.sql  up.sql
umbra-model/migrations/2019-12-06-173645_mysql_insert_algorithm_scrypt/: down.sql  up.sql
umbra-model/src/: crypt.rs  db.rs  errors.rs  lib.rs  schema.rs
umbra-mysql/: Cargo.toml
umbra-mysql/src/: error.rs  lib.rs
(+25 files in other folders)
