[package]
name = "umbra-model"
version = "0.1.0"
authors = ["Nathan A Sculli <nathan@vegasbuckeye.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "1.4", features = ["chrono", "mysql", "r2d2"] }
diesel-derive-enum = { version = "0.4", features = ["mysql"] }
dotenv = "0.15"
log = "0.4"
r2d2 = "0.8"
scrypt = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.8"
